--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "dependencies": {
-    "express": "^4.21.1",
-    "reload": "^2.4.0",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "express": "^4.21.1"
   }
 }
